applied aki32 util submodule

--- a/TimeHistoryResponseAnalysis/TimeHistoryResponseAnalysis.csproj
+++ b/TimeHistoryResponseAnalysis/TimeHistoryResponseAnalysis.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Utility\Utility.csproj" />
+    <ProjectReference Include="..\GitSubmodules\aki32-utilities\Aki32 Utilities\Aki32 Utilities.csproj" />
   </ItemGroup>
 
 </Project>
