--- a/TimeHistoryResponseAnalysis/TimeHistoryResponseAnalysis.csproj
+++ b/TimeHistoryResponseAnalysis/TimeHistoryResponseAnalysis.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Folder Include="# TestModel\output\" />
+    <Folder Include="Class\IndividualModel\" />
   </ItemGroup>
 
   <ItemGroup>
