--- a/Dynamics/Dynamics.csproj
+++ b/Dynamics/Dynamics.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GitSubmodules\aki32-utilities\Aki32 Utilities\Aki32 Utilities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Class\RDTechnique\" />
+  </ItemGroup>
+
 </Project>
