--- a/Dynamics/Dynamics.csproj
+++ b/Dynamics/Dynamics.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GitSubmodules\aki32-utilities\Aki32 Utilities.csproj" />
     <ProjectReference Include="..\GitSubmodules\aki32-utilities\Aki32 Utilities\Aki32 Utilities.csproj" />
   </ItemGroup>
 
